--- a/water_fall.html
+++ b/water_fall.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>瀑布流布局</title>
 </head>
+
 <body>
-    
+    <div id="main">
+        <div class="box">
+            <div class="pic"><img src="image/jay.jpg" alt=""></div>
+        </div>
+        <div class="box">
+            <div class="pic"><img src="image/jay.jpg" alt=""></div>
+        </div>
+        <div class="box">
+            <div class="pic"><img src="image/jay.jpg" alt=""></div>
+        </div>
+        <div class="box">
+            <div class="pic"><img src="image/jay.jpg" alt=""></div>
+        </div>
+        <div class="box">
+            <div class="pic"><img src="image/jay.jpg" alt=""></div>
+        </div>
+    </div>
 </body>
+
 </html>
